Un poco de todo Redshift
Ley de habol 
Parámetro z de la ley de habol

Que es la constante de habol y que tiene que ver con la expansión del universo

Pq se sabe que el universo se está expandiendo 

Que es el blueshift(algunos ejemplos) 

Cosmic macrogueib background

--- a/html/tab1.html
+++ b/html/tab1.html
@@ -8,13 +8,20 @@
 
 <!------------ Write from here ------------>
 
-<h3>First tab</h3>
+<h3>Redshift</h3>
 <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, blanditiis
-  molestiae non labore inventore eaque mollitia suscipit sit ratione magni
-  tempore officiis ipsum voluptatibus exercitationem ipsa! Voluptatem totam
-  distinctio ex! $$ \mathbb{Z}_N=\left\{e^{i2\pi \alpha/N},\,
-  \alpha=1,2,3,\dots,N-1 \right\} $$
-  <br />
-  Hola soy londoño
+  Redshift is related to the Doppler effect, which is the change in the
+  frequency of light or sound due to the relative motion between the wave source
+  and the observer. In the case of redshift, it occurs when the light source
+  (such as a galaxy) is moving away from us at a considerable velocity. As a
+  result, the wavelength of light is stretched, which decreases its frequency
+  and makes the light appear more red. This Doppler effect can be observed in
+  many sources of light, including stars and distant galaxies. By measuring the
+  redshift of light emitted by these sources, astronomers can determine the
+  speed at which they are moving away from us. In summary, redshift is related
+  to the Doppler effect and occurs when the light source is moving away from us
+  at a considerable velocity, which causes the wavelength of light to stretch
+  and decrease its frequency.
 </p>
+
+<img id="redshiftimg" src="img/redshift.jpg" width="600" />
