--- a/html/tab2.html
+++ b/html/tab2.html
@@ -1,16 +1,25 @@
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="js/mathjax.js"> </script>
-<script id="MathJax-script" async
-src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+<script src="js/mathjax.js"></script>
+<script
+  id="MathJax-script"
+  async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"
+></script>
 
 <!------------ Write from here ------------>
 
-<h3>Second tab</h3>
+<h3>Blueshift</h3>
 <p>
-   Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ipsum officiis ab nobis, ducimus iste fugit qui necessitatibus explicabo repellat sapiente quia laboriosam et suscipit odit eligendi aut! Dicta, qui.
-   
-    $$E=mc^2$$
-
-   Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda rem error nihil. Ducimus molestiae iure reiciendis hic sunt? Ad id quia cum fugit ipsum doloremque reiciendis ipsam laboriosam. A, quia.
-
+  Blue shift is the displacement towards shorter wavelengths of the spectral
+  lines of a light source. This effect occurs when the source is approaching an
+  observer and is due to the Doppler effect. In the astronomical context, blue
+  shift indicates that the light source is moving towards us, which can occur
+  when a star or a galaxy is moving towards us. An example is:
+  <br />
+  Quasars: Quasars are extremely luminous astronomical objects located at the
+  center of some galaxies. Because they are very far away from us, quasars
+  exhibit a very high red shift in their spectrum. However, some quasars exhibit
+  blue shifts, suggesting that they are closer to us than originally thought.
 </p>
+
+<img src="img/quaso.jpg" width="600" />
