--- a/html/tab3.html
+++ b/html/tab3.html
@@ -1,22 +1,28 @@
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="js/mathjax.js"> </script>
-<script id="MathJax-script" async
-src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-
+<script src="js/mathjax.js"></script>
+<script
+  id="MathJax-script"
+  async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"
+></script>
 
 <!------------ Write from here ------------>
 
-<h3>Third tab</h3>
+<h3>Cosmic Microwave Background</h3>
 <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, placeat! Debitis, aut hic itaque, obcaecati et rem placeat temporibus, praesentium expedita voluptatibus amet nisi nobis fugiat quis quod vero id.
-   
-    $$f(x)=x^2-3x+4$$
-
-   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum nemo molestiae sed, in necessitatibus sapiente doloribus iusto maxime porro, optio quis ea itaque, aliquid odit perferendis architecto ipsa perspiciatis mollitia.
-
-    $$I=\int_{-\infty}^{\infty}dx\,e^{-x^2}$$
-    
-   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem atque quam error consequatur exercitationem totam rerum, deleniti sunt at sit, provident dolore sequi repellendus! Sit labore voluptas ducimus natus accusantium.
-
-   Hola
+  The cosmic microwave background radiation is a radiation that fills the entire
+  universe and originated approximately 380,000 years after the Big Bang. This
+  radiation has a very precise spectral distribution, known as the blackbody
+  spectrum, which corresponds to the current temperature of the universe (2.725
+  K). The existence of the cosmic microwave background radiation is one of the
+  most solid pieces of evidence that the universe underwent a large initial
+  explosion (the Big Bang) and has been expanding since then. The cosmic
+  microwave background is one of the strongest pieces of evidence for the Big
+  Bang because its existence and properties match exactly what is expected if
+  the universe began with a big explosion approximately 13.8 billion years ago.
+  Moreover, the small fluctuations in the temperature of the cosmic microwave
+  background provide information about the distribution of matter in the early
+  universe, which is also consistent with the Big Bang model.
 </p>
+
+<img src="img/macrowaib.jpg" width="600" />
