Big bang evidence Se elimino la pagina de big bang evidence y la informacion paso a CMB (cosmic macrowave background)

--- a/html/tab1.html
+++ b/html/tab1.html
@@ -22,6 +22,32 @@
   to the Doppler effect and occurs when the light source is moving away from us
   at a considerable velocity, which causes the wavelength of light to stretch
   and decrease its frequency.
+  <br />
+  <br />
 </p>
 
 <img id="redshiftimg" src="img/redshift.jpg" width="600" />
+
+<p>
+  The Hubble's law, also known as the law of the expansion of the universe,
+  states that the velocity at which a galaxy is moving away from us is directly
+  related to its distance from us. This law was proposed by the astronomer Edwin
+  Hubble in 1929 and was based on his observations of nearby galaxies. The
+  Hubble's law is important because it suggests that the universe is expanding
+  uniformly in all directions. This means that if we were to go back in time,
+  all galaxies would have been closer together in the past and ultimately
+  originated from a single point, known as the Big Bang.
+  <br />
+  <br />
+  The "z" parameter of the Hubble's law refers to the redshift observed in the
+  light emitted by distant galaxies. This redshift is due to the Doppler effect
+  produced by the expansion of the universe and is related to the velocity at
+  which the galaxy is moving away from us.
+  <br />
+  <br />
+  The Hubble constant, denoted by "H0", is a cosmological parameter that
+  represents the rate of expansion of the universe at present time. The value of
+  the Hubble constant is estimated by measuring the recession velocities of
+  distant galaxies and comparing them with their distances. The currently
+  accepted value of the Hubble constant is approximately 73.3 km/s/Mpc.
+</p>
