--- a/html/tab3.html
+++ b/html/tab3.html
@@ -23,6 +23,22 @@
   Moreover, the small fluctuations in the temperature of the cosmic microwave
   background provide information about the distribution of matter in the early
   universe, which is also consistent with the Big Bang model.
+  <br />
+  <br />
+  The image we see of the cosmic microwave background shows small variations in
+  the temperature of this radiation in different regions of the sky. These
+  variations are key to understanding how galaxies and structures in the
+  universe formed as we know it today. Therefore, the cosmic microwave
+  background image is a window into the past that allows us to better understand
+  the evolution of the universe
 </p>
 
 <img src="img/macrowaib.jpg" width="600" />
+
+<p>
+  The Spherical Harmonics Decomposition is an important technique used by the
+  Planck collaboration to analyze cosmic microwave background data and decompose
+  temperature patterns into different angular scales. This has allowed
+  scientists to study how large-scale structures of the universe formed and
+  provide additional evidence for the Big Bang cosmological model.
+</p>
