--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1 id="main-title">Syntesis final project</h1>
+      <h1 id="main-title">🪐 Big Bang Evidence 🌑</h1>
     </header>
 
     <div class="tab">
@@ -38,13 +38,7 @@
       >
         Cosmic microwave background
       </button>
-      <button
-    class="tablinks"
-    onclick="openTab(event, 'tab4')"
-    id="tab4-button"
-  >
-    Big Bang evidence
-  </button>
+
     </div>
   </button>
   
@@ -54,11 +48,11 @@
     <div id="tab1" class="tabcontent"></div>
     <div id="tab2" class="tabcontent"></div>
     <div id="tab3" class="tabcontent"></div>
-    <div id="tab4" class="tabcontent"></div>
+
     <script src="js/tabs.js"></script>
 
     <script>
-      const texts = ["tab1", "tab2", "tab3", "tab4"];
+      const texts = ["tab1", "tab2", "tab3"];
       for (let i = 0; i < texts.length; i++) {
         $("#" + texts[i] + "-button").click(function () {
           $("#" + texts[i]).load("html/" + texts[i] + ".html");
