--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       >
         Cosmic microwave background
       </button>
+      <button
+      class="tablinks"
+      onclick="openTab(event, 'tab4')"
+      id="tab4-button"
+    >
+    The nucleosynthesis of the Big Bang
+    </button>
 
     </div>
   </button>
@@ -48,11 +55,12 @@
     <div id="tab1" class="tabcontent"></div>
     <div id="tab2" class="tabcontent"></div>
     <div id="tab3" class="tabcontent"></div>
+    <div id="tab4" class="tabcontent"></div>
 
     <script src="js/tabs.js"></script>
 
     <script>
-      const texts = ["tab1", "tab2", "tab3"];
+      const texts = ["tab1", "tab2", "tab3", "tab4"];
       for (let i = 0; i < texts.length; i++) {
         $("#" + texts[i] + "-button").click(function () {
           $("#" + texts[i]).load("html/" + texts[i] + ".html");
