--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1 id="main-title">🪐 Big Bang Evidence 🌑</h1>
+      <h1 id="main-title"> Big Bang Evidence :D</h1>
     </header>
 
     <div class="tab">
