--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
     The nucleosynthesis of the Big Bang
     </button>
 
+  </button>
+  <button
+  class="tablinks"
+  onclick="openTab(event, 'tab5')"
+  id="tab5-button"
+>
+The expansion of the universe
+</button>
+
     </div>
   </button>
   
@@ -56,11 +65,12 @@
     <div id="tab2" class="tabcontent"></div>
     <div id="tab3" class="tabcontent"></div>
     <div id="tab4" class="tabcontent"></div>
+    <div id="tab5" class="tabcontent"></div>
 
     <script src="js/tabs.js"></script>
 
     <script>
-      const texts = ["tab1", "tab2", "tab3", "tab4"];
+      const texts = ["tab1", "tab2", "tab3", "tab4", "tab5"];
       for (let i = 0; i < texts.length; i++) {
         $("#" + texts[i] + "-button").click(function () {
           $("#" + texts[i]).load("html/" + texts[i] + ".html");
