Cambio en fondo y complementos en la informacion Se cambió el fondo. La letra del título junto con los emojis. Más información en: tab2, tab4 y tab5.

--- a/html/tab2.html
+++ b/html/tab2.html
@@ -10,16 +10,20 @@
 
 <h3>Blueshift</h3>
 <p>
-  Blue shift is the displacement towards shorter wavelengths of the spectral
-  lines of a light source. This effect occurs when the source is approaching an
-  observer and is due to the Doppler effect. In the astronomical context, blue
-  shift indicates that the light source is moving towards us, which can occur
-  when a star or a galaxy is moving towards us. An example is:
+  Blue shift is the phenomenon where the spectral lines of a light source are
+  shifted towards shorter wavelengths. This effect occurs when the source is
+  approaching an observer and is due to the Doppler effect. In an astronomical
+  context, blue shift indicates that the light source is moving towards us,
+  which can occur when a star or galaxy is approaching us.
   <br />
-  Quasars: Quasars are extremely luminous astronomical objects located at the
-  center of some galaxies. Because they are very far away from us, quasars
-  exhibit a very high red shift in their spectrum. However, some quasars exhibit
-  blue shifts, suggesting that they are closer to us than originally thought.
+  Quasars are extremely luminous astronomical objects located at the center of
+  some galaxies. Because they are very far away from us, quasars exhibit a very
+  high red shift in their spectrum. However, some quasars exhibit blue shifts,
+  suggesting that they are closer to us than originally thought.
+  <br />
+  Blue shift is less common than red shift, as most astronomical objects are
+  moving away from us. However, there are some cases where the light source is
+  approaching, such as in the example of quasars mentioned earlier.
 </p>
 
 <img src="img/quaso.jpg" width="600" />
