--- a/html/tab3.html
+++ b/html/tab3.html
@@ -35,10 +35,19 @@
 
 <img src="img/macrowaib.jpg" width="600" />
 
+<h3>The Spherical Harmonics Decomposition</h3>
+
 <p>
-  The Spherical Harmonics Decomposition is an important technique used by the
-  Planck collaboration to analyze cosmic microwave background data and decompose
-  temperature patterns into different angular scales. This has allowed
-  scientists to study how large-scale structures of the universe formed and
-  provide additional evidence for the Big Bang cosmological model.
+  The Spherical Harmonics Decomposition is a mathematical technique used to
+  analyze cosmic microwave background data, which is an electromagnetic
+  radiation that fills the entire universe and originated from the Big Bang.
+  Scientists from the Planck project have used this technique to analyze
+  fluctuations in the temperature of this radiation and decompose them into
+  different angular scales. The idea behind this technique is that fluctuations
+  in the temperature of the cosmic microwave background are related to
+  fluctuations in the density of the early universe, and these fluctuations can
+  be expressed as a series of mathematical functions called spherical harmonics.
+  By decomposing temperature patterns into different angular scales, scientists
+  can study how large-scale structures of the universe formed, which in turn
+  provides additional evidence for the Big Bang cosmological model.
 </p>
