--- a/html/tab4.html
+++ b/html/tab4.html
@@ -33,3 +33,16 @@
   nuclear fusion processes to stop and existing nuclei began to combine to form
   atoms.
 </p>
+
+<h3>Abundance of light elements</h3>
+<p>
+  The abundance of chemical elements refers to the frequency at which certain
+  elements are found in the universe. These elements are mainly produced in
+  stars through nuclear fusion and then distributed throughout the universe
+  through processes such as supernova explosions.
+  <br />
+  Most of the universe is made up of hydrogen and helium, as these elements were
+  produced during the Big Bang. However, there are small amounts of other
+  elements that have been formed through fusion processes inside stars, such as
+  carbon, nitrogen, oxygen, and iron.
+</p>
