--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   </head>
   <body>
     <header>
-      <h1 id="main-title"> Big Bang Evidence :D</h1>
+      <h1 id="main-title">&#127758 Big Bang Evidence &#128301</h1>
     </header>
 
     <div class="tab">
