--- a/html/tab1.html
+++ b/html/tab1.html
@@ -10,23 +10,43 @@
 
 <h3>Redshift</h3>
 <p>
+  Redshift is a phenomenon in which the wavelength of light is stretched and
+  shifted towards the red end of the spectrum due to the relative motion between
+  the light source and the observer. This phenomenon occurs when a light source,
+  such as a galaxy, is moving away from us at a considerable velocity.
+  <br />
+  The amount of redshift can be measured by comparing the wavelength of light
+  emitted by a light source in the visible spectrum with the wavelength of the
+  same light observed on Earth. The relationship between the observed wavelength
+  and the emitted wavelength is known as the redshift factor (z). This factor
+  can be calculated using the following formula:
+  <br />
+  <br />
+</p>
+
+<p id="for">z = (λ<sub>obs</sub> - λ<sub>emit</sub>) / λ<sub>emit</sub></p>
+
+<p>
+  Where λ_obs is the observed wavelength of the light and λ_emit is the
+  wavelength emitted by the light source.
+  <br />
   Redshift is related to the Doppler effect, which is the change in the
   frequency of light or sound due to the relative motion between the wave source
   and the observer. In the case of redshift, it occurs when the light source
   (such as a galaxy) is moving away from us at a considerable velocity. As a
   result, the wavelength of light is stretched, which decreases its frequency
   and makes the light appear more red. This Doppler effect can be observed in
-  many sources of light, including stars and distant galaxies. By measuring the
-  redshift of light emitted by these sources, astronomers can determine the
-  speed at which they are moving away from us. In summary, redshift is related
-  to the Doppler effect and occurs when the light source is moving away from us
-  at a considerable velocity, which causes the wavelength of light to stretch
-  and decrease its frequency.
+  many sources of light, including stars and distant galaxies.
   <br />
-  <br />
+  Measuring the redshift of light emitted by distant sources is a crucial tool
+  for astronomers to determine the velocity and direction of movement of these
+  sources, which in turn provides information about the structure and evolution
+  of the universe.
 </p>
 
 <img id="redshiftimg" src="img/redshift.jpg" width="600" />
+
+<h3>The Hubble's law</h3>
 
 <p>
   The Hubble's law, also known as the law of the expansion of the universe,
@@ -51,3 +71,5 @@
   distant galaxies and comparing them with their distances. The currently
   accepted value of the Hubble constant is approximately 73.3 km/s/Mpc.
 </p>
+
+<img src="img/hubble.jpg" width="400" />
